Added book entry controller
